--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
 .bg{
   width: 100%;
   height: 35%;
-  background-image: url("images/bg-pattern-card.svg");
+  background-image: url("bg-pattern-card.svg");
 }
 .bottom{
   position: relative;
