--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ body{
   width: 100%;
   height: 35%;
   background-image: url("bg-pattern-card.svg");
+  background-repeat:no-repeat;
+  background-position:center;
+  background-size:cover;
 }
 .bottom{
   position: relative;
